Fix the flicker

--- a/src/app/components/charts/connecticut-map/connecticut-map.component.scss
+++ b/src/app/components/charts/connecticut-map/connecticut-map.component.scss
@@ -11,7 +11,7 @@
   width: 400px;
   height: 350px;
 
-  @media (max-width: 724px) {
+  @media (max-width: 918px) {
     width: 300px;
     height: 250px;
   }
